k8s/82-estimator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estimator
  namespace: lms-praktikum
  labels: { app: estimator }
spec:
  replicas: 1
  selector:
    matchLabels: { app: estimator }
  template:
    metadata:
      labels: { app: estimator }
    spec:
      serviceAccountName: estimator
      imagePullSecrets:
        - name: ocir-secret
      containers:
        - name: estimator
          image: hsg.ocir.io/axyfpuh4ahcf/praktikum-estimator:latest
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits: { cpu: "500m", memory: "1Gi" }
