k8s/10-redis.yaml
# Redis — cache & rate limiter untuk backend.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: lms-praktikum
  labels: { app: redis }
spec:
  replicas: 1
  selector:
    matchLabels: { app: redis }
  template:
    metadata:
      labels: { app: redis }
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits: { cpu: "250m", memory: "256Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: lms-praktikum
spec:
  selector: { app: redis }
  ports:
    - port: 6379
      targetPort: 6379
