k8s/30-frontend.yaml
# Frontend (React + nginx) — port 80.
# nginx di dalam image mem-proxy /api ke Service "backend:5001" (sudah ada di nginx.conf).
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: lms-praktikum
  labels: { app: frontend }
spec:
  replicas: 2
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: hsg.ocir.io/axyfpuh4ahcf/praktikum-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits: { cpu: "250m", memory: "256Mi" }
          readinessProbe:
            httpGet: { path: /, port: 80 }
            initialDelaySeconds: 5
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: lms-praktikum
spec:
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
