k8s/50-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: lms-praktikum
  labels: { app: grafana }
spec:
  replicas: 1
  selector:
    matchLabels: { app: grafana }
  template:
    metadata:
      labels: { app: grafana }
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: datasource
              mountPath: /etc/grafana/provisioning/datasources
            - name: dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards
            - name: dashboards
              mountPath: /var/lib/grafana/dashboards
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "500m", memory: "512Mi" }
      volumes:
        - name: datasource
          configMap: { name: grafana-datasource }
        - name: dashboard-provider
          configMap: { name: grafana-dashboard-provider }
        - name: dashboards
          configMap:
            name: grafana-dashboards
            optional: true   # dibuat via kubectl from-file (lihat README)
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: lms-praktikum
spec:
  selector: { app: grafana }
  ports:
    - port: 3000
      targetPort: 3000
