k8s/loadtest-locust-kapasitas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-cap
  namespace: lms-praktikum
  labels: { app: locust-cap }
spec:
  replicas: 1
  selector:
    matchLabels: { app: locust-cap }
  template:
    metadata:
      labels: { app: locust-cap }
    spec:
      containers:
        - name: locust
          image: docker.io/locustio/locust:latest
          args:
            - "-f"
            - "/mnt/locust/locustfile.py"
            - "--host"
            - "http://orchestrator:4000"
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: script
              mountPath: /mnt/locust
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "500m", memory: "512Mi" }
      volumes:
        - name: script
          configMap: { name: locust-cap-script }
---
apiVersion: v1
kind: Service
metadata:
  name: locust-cap
  namespace: lms-praktikum
spec:
  selector: { app: locust-cap }
  ports:
    - port: 8089
      targetPort: 8089
